--- a/accounting-roadmap.html
+++ b/accounting-roadmap.html
@@ -21,27 +21,49 @@
 </ul>
     <div class="container">
 
-        <div class="top-section">
-            <button class="ac-start">Start</button>
+        <div class="top-section" style="position: relative;">
         </div>
 
         <div class="bottom-section">
 
             <div class="column-1">
+
+              <div class="arrow" style="position: absolute; height: 300px;">
+                <hr class="line" style="transform: rotate(270deg); top: 150px; left: -150px; height: 300px;">
+              </div>
+
+                <div class="arrow" style="height: 100px;">
+                  <hr class="line" style="height: 100px;">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="math1006">MATH 1006: College Algebra</button>
                         <span class="tooltiptext">
                             Real Numbers, Sets and Intervals, Absolute Value, Exponents and Radicals, Algebraic Expressions, Polynomials, Rational Expressions, Factoring, Solving Basic Equations, Solving Equations Involving Radicals, Solving Quadratic Equations, The Coordinate Plane, Lines, Introduction to Functions and Relations, Linear Functions in Two Variables, Systems of Linear Equations, Graphs of linear and quadratic functions.
                         </span>
                 </div>
-                <button class="invisible"></button>
-                <button class="invisible"></button>
+
+                <div class="arrow" style="height: 150px;">
+                  <hr class="line" style="height: 150px;">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="acct3041">ACCT 3041: Cost & Mangerial Accounting For Strategic Decision-Making</button>
                         <span class="tooltiptext">
                             Strategies for cost accumulation with emphasis on control, planning, and decision making. Management decision making under uncertainty.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="busn3421">BUSN 3421: Foundations of Business Analytics</button>
                         <span class="tooltiptext">
@@ -51,30 +73,79 @@
             </div>
 
             <div class="column-2" style="position: relative; left: 50px;">
+
+              <div class="arrow" style="position: absolute; height: 300px;">
+                <hr class="line" style="transform: rotate(270deg); top: 150px; left: -150px; height: 300px;">
+              </div>
+
+              <div class="arrow" style="height: 100px;">
+                <hr class="line" style="height: 100px;">
+                <hr class="left-arrow">
+                <hr class="right-arrow">
+              </div>
+
+              <div style="position: absolute; top: -65px; left: 225px;">
+                <button class="start-square">Start</button>
+              </div>
+
                 <div class="tooltip">
                     <button class="busn2200 econ2200">BUSN/ECON 2200: Elementary Microeconomics</button>
                         <span class="tooltiptext">
                             Basic laws and principles of economic science. Value, price, and distribution. Preparation for more comprehensive studies involving application of the tools of analysis to economic problems.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="busn2100 econ2100">BUSN/ECON 2100: Elementary Macroeconomics</button>
                         <span class="tooltiptext">
                             Contemporary economic analysis of the operation of the United States economy. Role of markets and the determination of the overall level of economic activity. Dynamic process of growth, inflation, and international trade.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="busn3400 econ3400">BUSN/ECON 3400: Intro To Business Statistics</button>
                         <span class="tooltiptext">
                             Descriptive statistics including measures of central tendency, dispersion, and skewness. Probability and theoretical probability distributions including the binomial function and the normal curve. Sampling, estimation, and test of hypothesis. Simple correlation and regression analysis. Applications from social sciences.
                         </span>
                 </div>
+
+                <div class="arrow" style="transform: rotate(270deg); position: absolute; top: 330px; right: 187px; height: 75px;">
+                  <hr class="line" style="height: 75px;">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="finc3310">FINC 3310: Principles Of Financial Management</button>
                         <span class="tooltiptext">
                             Understanding the goal and principles of financial management. Time value of money, bond valuation and stock valuation. Capital budgeting methods. Introduction to financial statement analysis, risk and return, asset pricing and capital structure analysis.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="finc3330">FINC 3330: Investments</button>
                         <span class="tooltiptext">
@@ -84,26 +155,60 @@
             </div>
 
             <div class="column-3" style="position: relative; left: 100px;">
-                <button class="invisible"></button>
+
+              <div class="arrow" style="position: absolute; height: 300px;">
+                <hr class="line" style="transform: rotate(270deg); top: 150px; left: -150px; height: 300px;">
+              </div>
+
+                <div style="height: 225px;"></div>
+
                 <div class="tooltip">
                     <button class="acct3001">ACCT 3001: Financial & Mangerial</button>
                         <span class="tooltiptext">
                             The course expands upon the financial accounting topics in ACCT 2001 and examines the use of accounting information for decision making by managers of business organizations. Managerial accounting topics include cost terminology, product costing, quality management, profit planning, control of operations, segment reporting, profitability analysis, and relevant costs for decision making. Students will use appropriate software, including spreadsheets, to organize and analyze information.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="busn3200">BUSN 3200: Principles Of Management</button>
                         <span class="tooltiptext">
                             Principles of management. Functions of the manager. Organization and operation of American business. Management processes, concepts, and specific problems of production, management, labor relations, marketing, financing, decision making and accounting. Lectures, discussions, and case studies.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="busn3100">BUSN 3100: Principles Of Marketing</button>
                         <span class="tooltiptext">
                             An overall view of the field of marketing and the theory of consumer and enterprise demand. Emphasis is given to consumer behavior, advertising, social responsibility, marketing strategies, market potential, product planning and development, market research, pricing, sales promotion, channels of distribution and government regulation.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <button class="acct3000higher">ACCT 3000 OR Higher: Accounting Elective</button>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="casd2623">CASD 2623: Interpersonal Communication For Business & Professions</button>
                         <span class="tooltiptext">
@@ -113,69 +218,174 @@
             </div>
 
             <div class="column-4">
+
+              <div class="arrow" style="position: absolute; height: 300px;">
+                <hr class="line" style="transform: rotate(270deg); top: 150px; left: -150px; height: 300px;">
+              </div>
+
+              <div class="arrow" style="height: 100px;">
+                <hr class="line" style="height: 100px;">
+                <hr class="left-arrow">
+                <hr class="right-arrow">
+              </div>
+
                 <div class="tooltip">
                     <button class="acct2001">ACCT 2001: Principles Of Accounting 1</button>
                         <span class="tooltiptext">
                             Introduction to the concepts and principles of financial accounting. Techniques of data accumulation. Nature and interpretation of financial statements. Corporate accounting.
                         </span>
                 </div>
+
+                <div style="position: relative;">
+                  <div class="arrow" style="position: absolute; top: -15px; left: -80px; transform: rotate(230deg); height: 75px;">
+                    <hr class="line" style="height: 75px;">
+                    <hr class="left-arrow">
+                    <hr class="right-arrow">
+                  </div>
+                  <div class="arrow" style="position: absolute; top: -15px; right: -80px; transform: rotate(130deg); height: 75px;">
+                    <hr class="line" style="height: 75px;">
+                    <hr class="left-arrow">
+                    <hr class="right-arrow">
+                  </div>
+                </div>
+
             </div>
 
             <div class="column-5" style="position: relative; right: 100px;">
-                <button class="invisible"></button>
+
+              <div class="arrow" style="position: absolute; height: 300px;">
+                <hr class="line" style="transform: rotate(270deg); top: 150px; left: -150px; height: 300px;">
+              </div>
+
+                <div style="height: 225px;"></div>
+
                 <div class="tooltip">
                     <button class="acct3011">ACCT 3011: Intermediate Financial Accounting 1</button>
                         <span class="tooltiptext">
                             Detailed consideration of the accounting principles and valuation of current assets, operational assets, intangibles, and cash flows. Concepts of future and present value and analytical review of financial statements. Emphasis placed on pronouncements of the Financial Accounting Standards Board.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="acct3021">ACCT 3021: Intermediate Financial Accounting 2</button>
                         <span class="tooltiptext">
                             Detailed consideration of long-term investments, liabilities, and stockholders' equity. The statement of cash flows. Accounting for income taxes and changes in accounting. Value of accounting research in solving complex accounting and reporting problems.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="acct3101">ACCT 3101: Income Taxation</button>
                         <span class="tooltiptext">
                             Principles and problems associated with the federal income-tax laws. Methods of tax research. Broad implications and consequences of the tax system with brief coverage of other tax laws and jurisdictions
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <button class="acct3000higher">ACCT 3000 OR Higher: Accounting Elective</button>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <button class="acct3000higher">ACCT 3000 OR Higher: Accounting Elective</button>
             </div>
 
             <div class="column-6">
+
+              <div class="arrow" style="position: absolute; height: 300px;">
+                <hr class="line" style="transform: rotate(270deg); top: 150px; right: -151px; height: 300px;">
+              </div>
+
+                <div class="arrow" style="height: 100px;">
+                  <hr class="line" style="height: 100px;">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="cisc1050">CISC 1050: Intro To Computer Applications</button>
                         <span class="tooltiptext" style="right: 100%">
                             Introduction to the use of the computer in the home and office. Computer literacy. Word processing, database systems, and spreadsheets. Examination and evaluation of computer peripherals and software for personal computers.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="acct3201">ACCT 3201: Business Law 1</button>
                         <span class="tooltiptext" style="right: 100%">
                             Legal theory, legal and deductive reasoning, constitutional law, administrative law, the court system, civil and criminal procedures, alternative dispute resolution, criminal law and the concepts of tort and strict liability. Common law contract theory, the Uniform Commercial Code, basic elements of a contract, remedies, statute of frauds and third party rights. Secured transactions, personal property and insurance law.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="phil3314">PHIL 3314: Moral Issues In Business</button>
                         <span class="tooltiptext" style="right: 100%">
                             Basic approaches to moral reasoning and their application to such issues as justice and economic systems; corporate responsibility to society, the environment, and developing nations; and the duties of businesses to their employees, their customers, and their competitors.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">    
                     <button class="acct3051">ACCT 3051: Accounting Information Systems</button>
                         <span class="tooltiptext" style="right: 100%">
                             This course covers conceptual issues in the design and use of accounting information systems and also includes topics related to the auditing of information sytems, including IT governance and risk assessment, cybersecurity and systems-related control risks. Conceptual topics include flowcharting, relational database concepts, systems control and auditing, and applications of these to internal controls in particular accounting cycles.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="busn3430">BUSN 3430: Business Management</button>
                         <span class="tooltiptext" style="right: 100%">
                             Study in managerial decision making to solve a wide range of operating management problems. Topics covered include: planning, evaluating, and control of operations; forecasting and inventory management; scheduling; project design and management; resource allocation; queuing models; quality of the work environment; and technological change. Design and implementation of management strategy will be emphasized through computer simulation, problems, and cases.
                         </span>
                 </div>
+
+                <div class="arrow">
+                  <hr class="line">
+                  <hr class="left-arrow">
+                  <hr class="right-arrow">
+                </div>
+
                 <div class="tooltip">
                     <button class="acct4501w">ACCT 4501W: Operations Management</button>
                         <span class="tooltiptext" style="right: 100%">
