--- a/english-roadmap.html
+++ b/english-roadmap.html
@@ -27,13 +27,14 @@
 
     <div class="bottom-section">
 
-      <button class="en-start">Start</button>
-
+      <div></div>
+      <div></div>
       <div></div>
       <div></div>
 
-      <div class="column-1">
-        <button class="invisible"></button>
+      <div class="column-1" style="position: relative; right: -75px;">
+
+        <div style="height: 250px;"></div>
         <div class="tooltip">
         <button>ENGL 1012: English Composition 2</button>
         <span class="tooltiptext">
@@ -41,6 +42,11 @@
           Provides students with an opportunity to explore a particular subject in depth and further develop skills of critical thinking, 
           research techniques, and clear expression necessary for academic writing.Topics include: The Fool in Literature; Reading the City; 1960s: Decade of Revolt; Novels of the Jazz Age; Cross-Cultural Writing and the Arts.
         </span>
+      </div>
+      <div class="arrow">
+        <hr class="line">
+        <hr class="left-arrow">
+        <hr class="right-arrow">
       </div>
       <div class="tooltip">
         <button>ENGL 2120: Overview Of Literary Study 1</button>
@@ -52,6 +58,11 @@
           literature as viewed through the various lenses of contemporary theory and critical discourses.
         </span>
       </div>
+      <div class="arrow">
+        <hr class="line">
+        <hr class="left-arrow">
+        <hr class="right-arrow">
+      </div>
       <div class="tooltip">
         <button>ENGL 2121: Overview Of Literary Study 2</button>
         <span class="tooltiptext">
@@ -62,12 +73,38 @@
           literature as viewed through the various lenses of contemporary theory and critical discourses.
         </span>
         </div>
+        <div class="arrow">
+            <hr class="line">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
         <button>ENGL Electives</button>
+        <div class="arrow">
+            <hr class="line">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
         <button>ENGL Electives</button>
+        <div class="arrow">
+            <hr class="line">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
         <button>ENGL/CMLT 4000: Seminar</button>
       </div>
 
       <div class="column-2">
+
+        <div style="position: absolute; top: -65px; left: 23px;">
+            <button class="start-square">Start</button>
+          </div>
+
+        <div class="arrow" style="height: 100px;">
+            <hr class="line" style="height: 100px;">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
+
         <div class="tooltip">
         <button>ENGL 1010: English Composition 1</button>
         <span class="tooltiptext">
@@ -77,20 +114,77 @@
           comparisons of texts, and such other expository forms as narration, description, and argumentation. 
           Emphasis on writing as a process: invention, revision, editing. Satisfies Pathways Required Core English composition requirement. 
         </span>
+
+        <div style="position: relative;">
+            <div class="arrow" style="position: absolute; top: -15px; left: -10px; transform: rotate(230deg); height: 75px;">
+              <hr class="line" style="height: 75px;">
+              <hr class="left-arrow">
+              <hr class="right-arrow">
+            </div>
+            <div class="arrow" style="position: absolute; top: -15px; right: -10px; transform: rotate(130deg); height: 75px;">
+              <hr class="line" style="height: 75px;">
+              <hr class="left-arrow">
+              <hr class="right-arrow">
+            </div>
+          </div>
       </div>
       </div>
 
-      <div class="column-3">
-        <button class="invisible"></button>
+      <div class="column-3" style="position: relative; right: 75px;">
+        <div style="height: 250px;"></div>
         <button>ENGL Period 1-3 (Courses Below)</button>
+
+        <div class="arrow">
+            <hr class="line">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
+
         <button>ENGL Period 4-6 (Courses Below)</button>
+
+        <div class="arrow">
+            <hr class="line">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
+
         <button>ENGL Period 1-3 (Courses Below)</button>
+
+        <div class="arrow">
+            <hr class="line">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
+
         <button>ENGL Electives</button>
+
+        <div class="arrow">
+            <hr class="line">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
+
         <button>ENGL Breadth & Depth Area A (Courses Below)</button>
+
+        <div class="arrow">
+            <hr class="line">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
+
         <button>ENGL Breadth & Depth Area B (Courses Below)</button>
+
+        <div class="arrow">
+            <hr class="line">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
+
         <button>ENGL Electives</button>
       </div>
 
+      <div></div>
+      <div></div>
       <div></div>
       <div></div>
 
