--- a/multimedia-roadmap.html
+++ b/multimedia-roadmap.html
@@ -24,14 +24,24 @@
   <div class="container">
 
     <div class="top-section">
-      <button class="md-start">Start</button>
     </div>
 
     <div class="bottom-section">
-
       <div class="column-1">
+        <div class="arrow" style="height: 100px;">
+          <hr class="line" style="height: 100px;">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
+        <div class="arrow" style="position: absolute; height: 300px;">
+          <hr class="line" style="transform: rotate(270deg); top: 150px; left: -150px; height: 300px;">
+        </div>
         <button class="passed-ap-exam">If Passed AP Exam</button>
-        <button class="invisible"></button>
+        <div class="arrow" style="height: 225px;">
+          <hr class="line" style="height: 225px;">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
         <div class="tooltip">
           <button class="math1201">MATH 1201: Calculus 1</button>
             <span class="tooltiptext">
@@ -39,7 +49,11 @@
               and trigonometric functions of one variable; methods of numerical approximation, and applications of the derivative to mathematics, physics, engineering, biology, chemistry, and other fields.
             </span>
         </div>
-        
+        <div class="arrow">
+          <hr class="line">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
         <div class="tooltip">
           <button class="math1206">MATH 1206: Calculus 2</button>
               <span class="tooltiptext">
@@ -47,7 +61,11 @@
                 applications of integration for functions of one variable, improper integrals, l'Hopital's rule, sequences, series, and polar coordinates.
               </span>
         </div>
-
+        <div class="arrow">
+          <hr class="line">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
         <div class="tooltip">
           <button class="math2501">MATH 2501: Probability And Statistics</button>
             <span class="tooltiptext">
@@ -58,12 +76,25 @@
       </div>
 
       <div class="column-2">
+        <div class="arrow" style="position: absolute; height: 300px;">
+          <hr class="line" style="transform: rotate(270deg); top: 150px; left: -150px; height: 300px;">
+        </div>
+        <div class="arrow" style="height: 100px;">
+          <hr class="line" style="height: 100px;">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
         <div class="tooltip">
           <button class="math1006">MATH 1006: College Algebra</button>
             <span class="tooltiptext">
               Real Numbers, Sets and Intervals, Absolute Value, Exponents and Radicals, Algebraic Expressions, Polynomials, Rational Expressions, Factoring, Solving Basic Equations, 
               Solving Equations Involving Radicals, Solving Quadratic Equations, The Coordinate Plane, Lines, Introduction to Functions and Relations, Linear Functions in Two Variables, Systems of Linear Equations, Graphs of linear and quadratic functions.
             </span>
+        </div>
+        <div class="arrow">
+          <hr class="line">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
         </div>
         <div class="tooltip">
           <button class="math1011">MATH 1011: Precalculus</button>
@@ -72,11 +103,28 @@
               polynomials and rational functions, exponential, logarithmic, trigonometric, and inverse trigonometric functions. Conic sections. Binomial theorem. Introduction to limit ideas.
             </span>
         </div>
+        <div style="position: relative; height: 100px;">
+          <div class="arrow" style="position: absolute; top: -18px; left: -80px; transform: rotate(230deg); height: 100px;">
+            <hr class="line" style="height: 100px;">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
+          <div class="arrow" style="position: absolute; top: -18px; right: -80px; transform: rotate(130deg); height: 100px;">
+            <hr class="line" style="height: 100px;">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
+        </div>
       </div>
 
       <div class="column-3">
-        <button class="invisible"></button>
-        <button class="invisible"></button>
+
+        <div class="arrow" style="position: absolute; height: 300px;">
+          <hr class="line" style="transform: rotate(270deg); top: 150px; left: -150px; height: 300px;">
+        </div>
+
+        <div style="height: 375px;"></div>
+
         <div class="tooltip">
           <button class="cisc2210">CISC 2210: Discrete Structures</button>
             <span class="tooltiptext">
@@ -84,6 +132,13 @@
               Applications of graph theory to computer science. Related algorithms. Introduction to combinatorial computing and counting arguments. Introduction to error analysis.
             </span>
         </div>
+
+        <div class="arrow">
+          <hr class="line">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
+
         <div class="tooltip">
           <button class="cisc3230">CISC 3230: Theoretical Computer Science</button>
             <span class="tooltiptext">
@@ -91,6 +146,13 @@
               Other models of computation, including recursive functions. Universal program and unsolvability.
             </span>
         </div>
+
+        <div class="arrow">
+          <hr class="line">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
+
         <div class="tooltip">
         <button class="cisc3620">CISC 3620: Graphics</button>
         <span class="tooltiptext">
@@ -103,58 +165,114 @@
       </div>
 
       <div class="column-4">
+        <div class="arrow" style="position: absolute; height: 300px;">
+          <hr class="line" style="transform: rotate(270deg); top: 150px; left: -150px; height: 300px;">
+        </div>
+        <div style="position: absolute; top: -65px; left: 150px;">
+          <button class="start-square">Start</button>
+        </div>
+        <div class="arrow" style="height: 100px;">
+          <hr class="line" style="height: 100px;">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
         <div class="tooltip">
-        <button class="cisc1110 cisc1215" style="position: relative; left: -60px;">CISC 1110 OR CISC 1215: Intro To C++ OR Python</button>
-        <span class="tooltiptext" style="left: 63%">
+        <button class="cisc1110 cisc1215">CISC 1110 OR CISC 1215: Intro To C++ OR Python</button>
+        <span class="tooltiptext" style="left: 100%;">
           CISC 1110:Fundamentals of computer graphics programming. Graphics hardware and software standards. 
           2D geometric primitives and raster images. 3D object representations. Data structures, algorithms, 
           and the graphics pipeline. Graphical user interfaces. Underlying concepts in computer graphics systems, 
           including games, animation, modeling, rendering, and paint systems.
         </span>
-        <span class="tooltiptext" style="right: 140%">
+        <span class="tooltiptext" style="right: 100%;">
           CISC 1215:The Python programming language. Algorithms, computers and programs. Writing, debugging, 
           and testing programs. Loops and conditional control structures. Function definition and parameter passing. 
           Strings, Lists, and Tuples. Sorting, searching and other basic algorithms. Input and output. 
           Programming applications selected from various areas. Python tools. History and basic concepts of computer science.
         </span>
         </div>
+        <div class="arrow">
+          <hr class="line">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
         <div class="tooltip">
-        <button class="cisc1170" style="position: relative; left: -60px;">CISC 1170: Java Programming</button>
-        <span class="tooltiptext" style="left: 63%">
+        <button class="cisc1170">CISC 1170: Java Programming</button>
+        <span class="tooltiptext">
           Intensive introduction to Java for students who have completed a programming course in another language. 
           The facilities of the Java programming language core and the key Java class libraries. 
           Imperative and procedural programming in Java. Elementary object-oriented programming. 
           File processing, exception handling, and an introduction to graphical user interface programming. 
         </span>
       </div>
+      <div class="arrow" style="position: absolute; top: 270px; left: -30px; transform: rotate(230deg); height: 100px;">
+        <hr class="line" style="height: 100px;">
+        <hr class="left-arrow">
+        <hr class="right-arrow">
+      </div>
+      <div class="arrow">
+        <hr class="line">
+        <hr class="left-arrow">
+        <hr class="right-arrow">
+      </div>
       <div class="tooltip">
-        <button class="cisc3115" style="position: relative; right: -100px;">CISC 3115: Modern Techniques</button>
-          <span class="tooltiptext" style="left: 165%">
+        <button class="cisc3115">CISC 3115: Modern Techniques</button>
+          <span class="tooltiptext">
             A second course in programming. Programming techniques emphasizing reliability, maintainability, and reusability. Multi-file programs. Abstract data types. Objects, classes, and object-oriented design. 
             Test suites, test drivers, and testing strategies; debugging, assertions, and an introduction to formal techniques. Recursion, event-driven programming and threads, GUI programming, and simple network programming.
         </span>
       </div>
+      <div class="arrow">
+        <hr class="line">
+        <hr class="left-arrow">
+        <hr class="right-arrow">
+      </div>
       <div class="tooltip">
-        <button class="cisc3130" style="position: relative; right: -100px;">CISC 3130: Data Structures</button>
-          <span class="tooltiptext" style="left: 165%">
+        <button class="cisc3130">CISC 3130: Data Structures</button>
+          <span class="tooltiptext">
             Container classes: their design, implementations, and applications. Sequences: vectors, linked lists, stacks, queues, deques, lists. 
             Associative structures: sets, maps and their hash and tree underlying representations. Sorting and searching techniques. Collection frameworks and hierarchies.
           </span>
       </div>
-        <button class="invisible"></button>
-        <button class="invisible"></button>
-        <button class="invisible"></button>
-        <div class="tooltip">  
-          <button class="cisc4900">CISC 4900: Independent And Group Research Project</button>
-            <span class="tooltiptext">
-              Planning and development of a real computer systems project supervised by a faculty member. Projects may involve group participation. 
-              Achievement measured by demonstrable attainment of the project's goals. Written report.
-            </span>
-        </div>
+      <div class="arrow" style="position: relative; top: 10px; right: -60px; transform: rotate(90deg); height: 120px;">
+        <hr class="line" style="height: 120px;">
+        <hr class="left-arrow">
+        <hr class="right-arrow">
+      </div>
+      <div class="arrow" style="position: absolute; top: 450px; right: -19px; transform: rotate(90deg); height: 50px;">
+        <hr class="line" style="height: 50px;">
+        <hr class="left-arrow">
+        <hr class="right-arrow">
+      </div>
+      <div class="arrow" style="position: absolute; top: 508px; height: 325px; transform: rotate(180deg);">
+        <hr class="line" style="height: 325px;">
+      </div>
+      <div class="arrow" style="position: absolute; top: 782px; right: 34px; transform: rotate(90deg); height: 100px;">
+        <hr class="line" style="height: 100px;">
+        <hr class="left-arrow">
+        <hr class="right-arrow">
+      </div>
+      <div class="arrow" style="position: absolute; top: 784px; left: 34px; transform: rotate(270deg); height: 100px;">
+        <hr class="line" style="height: 100px;">
+        <hr class="left-arrow">
+        <hr class="right-arrow">
+      </div>
+      <div style="height: 158px;"></div>
+      <div class="tooltip" style="position: relative; left: -225px;">  
+        <button class="cisc4900">CISC 4900: Independent And Group Research Project</button>
+          <span class="tooltiptext">
+            Planning and development of a real computer systems project supervised by a faculty member. Projects may involve group participation. 
+            Achievement measured by demonstrable attainment of the project's goals. Written report.
+          </span>
+      </div>
       </div>
 
       <div class="column-5">
-        <button class="invisible"></button>
+        <div class="arrow" style="height: 225px;">
+          <hr class="line" style="height: 225px;">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
         <div class="tooltip">
           <button class="cisc1115">CISC 1115: Intro To Java</button>
             <span class="tooltiptext">
@@ -162,11 +280,23 @@
               Sorting, searching and other basic algorithms. Input and output. Programming applications selected from various disciplines. History and basic concepts of computer science.
             </span>
         </div>
-        <button class="invisible"></button>
-        <button class="invisible"></button>
+        <div style="position: relative;">
+          <div class="arrow" style="position: absolute; top: -24px; left: -80px; transform: rotate(240deg); height: 100px;">
+            <hr class="line" style="height: 100px;">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
+          <div class="arrow" style="position: absolute; top: -26px; right: -80px; transform: rotate(120deg); height: 100px;">
+            <hr class="line" style="height: 100px;">
+            <hr class="left-arrow">
+            <hr class="right-arrow">
+          </div>
+        </div>
+        <div style="height: 135px;"></div>
         <button class="ciscelective">Additional CISC Course: CISC 3650, CISC 3660, CISC 3665, OR CISC 3667</button>
+        <div style="height: 37px;"></div>
         <button class="cisc3140-4610">CISC 3140-4610: Three Advanced CIS Electives</button>
-        <button class="invisible"></button>
+        <div style="height: 165px;"></div>
         <div class="tooltip">
           <button class="cisc5001">CISC 5001: Independent Study And Research</button>
             <span class="tooltiptext">
@@ -176,13 +306,25 @@
       </div>
 
       <div class="column-6">
-        <button class="invisible"></button>
+        <div class="arrow" style="position: absolute; height: 300px;">
+          <hr class="line" style="transform: rotate(270deg); top: 150px; right: -151px; height: 300px;">
+        </div>
+        <div class="arrow" style="height: 100px;">
+          <hr class="line" style="height: 100px;">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
         <div class="tooltip">
           <button class="engl1010">ENGL 1010: English Composition 1</button>
             <span class="tooltiptext" style="right: 100%">
               Workshop in expository writing: strategies of, and practice in, analytical reading and writing about texts. Fundamentals of grammar and syntax. 
               Frequent assignments in writing summaries, analyses, comparisons of texts, and such other expository forms as narration, description, and argumentation. Emphasis on writing as a process: invention, revision, editing. Satisfies Pathways Required Core English composition requirement.
             </span>
+        </div>
+        <div class="arrow">
+          <hr class="line">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
         </div>
         <div class="tooltip">
           <button class="engl1012">ENGL 1012: English Composition 2</button>
@@ -191,6 +333,11 @@
               Students should take English *1012 [2] directly after completing English 1010 [1]. Topics include: The Fool in Literature; Reading the City; 1960s: Decade of Revolt; Novels of the Jazz Age; Cross-Cultural Writing and the Arts. Satisfies Pathways Required Core English composition requirement.
             </span>
         </div>
+        <div class="arrow">
+          <hr class="line">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
         <div class="tooltip">
           <button class="cisc2820w">CISC 2820W: Computer And Ethics</button>
             <span class="tooltiptext" style="right: 100%">
@@ -198,12 +345,26 @@
               Application of theoretical frameworks such as virtue ethics, deontological theories and utilitarianism to the ethical problems encountered in computing technologies. Writing intensive course.
             </span>
         </div>
+        <div class="arrow">
+          <hr class="line">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
         <button class="artelectives">Two Art Electives</button>
-        <div style="width: 150px; height: 80px; font-size: 12px; text-align: center;">
-            <p style="word-break: break-word; color:bisque">
+        <div class="arrow" style="height: 75px; position: relative;">
+          <hr class="line" style="height: 75px;">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
+        <div class="arrow" style="position: absolute; transform: rotate(0deg); left: 106px; top: 510px;">
+          <hr class="left-arrow">
+          <hr class="right-arrow">
+        </div>
+        <div style="font-size: 8px; text-align: center;">
+            <button style="width: 215px; height: 100px; word-break: break-word; font-size: 12px;">
                 ARTD 2811, ARTD 2812, ARTD 2820, ARTD 2821, ARTD 3812, FILM 1201, FILM 2701, MUSC 3260, MUSC 3261,
                 MUSC 3262, MUSC 3264/CISC 2600, MUSC 3322, TVRA 2420, TVRA 3861, TVRA 3871, TVRA 3951
-            </p>
+            </button>
         </div>
       </div>
 
